build: replace WiX/MSI pipeline with jpackage app-image + Inno Setup native setup wizard